# rotationctrl_pi

./: CMakeLists.txt  README  RotationCtrl.fbp  VERSION.cmake  appveyor.yml
cmake/: PluginInstall.cmake  PluginPackage.cmake
manual/: antora.yml  site.yml
manual/modules/ROOT/pages/: index.adoc
manual/rotationctrl/: site.yml
po/: POTFILES.in  ar_SA.po  bg_BG.po  ca.po  ca_ES.po  cs.po  cs_CZ.po  da.po  da_DK.po  de.po  de_DE.po  el.po  el_GR.po  en_GB.po  es.po  es_ES.po  et.po  et_EE.po  fi.po  fi_FI.po  fil_PH.po  fr.po  fr_FR.po  gl.po  gl_ES.po  he_IL.po  hi_IN.po  hu.po  hu_HU.po  id_ID.po  is_IS.po  it.po  it_IT.po  ja.po  ja_JP.po  ko_KR.po  mr_IN.po  nb.po  nb_NO.po  nl.po  (+20 more)
src/: PreferencesDialog.cpp  PreferencesDialog.h  RotationCtrlUI.cpp  RotationCtrlUI.h  icons.cpp  icons.h  ocpn_plugin.h  rotationctrl_pi.cpp  rotationctrl_pi.h
